@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.17 2002/10/15 17:09:10 bill_clementson Exp $	 -->
+<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.18 2002/10/21 16:57:44 bill_clementson Exp $	 -->
 <html>
 
 <head>
@@ -81,7 +81,7 @@ suggested directory names, the provided Emacs start-up file (.emacs) will work
     don't want/need the documentation, this step is optional as well) and the
     relevant parts of #8 &amp; #9 (regardless of which implementations you
     download) and you will need to download at least one of #4 - #7. You can
-    download multiple implementations if you want to trial them. </li>
+    download multiple implementations if you want to trial them.</li>
 </ul>
 <h3><a name="Installing Emacs">1. Installing Emacs</a></h3>
 <ul>
@@ -225,13 +225,10 @@ lispworks-4200 -init c:\home\lisp\console.lisp</pre>
 </blockquote>
 <h3><a name="Installing Corman CL">7. Installing Corman CL</a></h3>
 <ul>
-  <li>Download the precompiled Emacs binaries for <a href="http://www.corman.net/">Corman
-    Lisp</a> for Windows from: <a href="http://www.cormanlisp.com/cgi/rgcorman/ccl_download_form20.cgi">http://www.cormanlisp.com/cgi/rgcorman/ccl_download_form20.cgi</a></li>
-  <li>(Note: you will need to agree to their license and provide an email
-    address. Corman will send you an email with a password for the installation
-    program).</li>
-  <li>Run the downloaded installation program (CormanLisp_2_0_Setup.exe) and
-    install Corman CL into the c:\bin\corman-2.0 directory.</li>
+  <li>Download the precompiled binaries for <a href="http://www.corman.net/">Corman
+    Lisp</a> for Windows from: <a href="http://www.cormanlisp.com/cgi/rgcorman/ccl_download_form.cgi">http://www.cormanlisp.com/cgi/rgcorman/ccl_download_form.cgi</a></li>
+  <li>Run the downloaded installation program (CormanLisp_1_5_Setupex.exe) and
+    install Corman CL into the c:\bin\corman-1.5 directory.</li>
 </ul>
 <h3><a name="Configuration steps">8. Configuration steps</a></h3>
 <ul>
@@ -263,9 +260,9 @@ lispworks-4200 -init c:\home\lisp\console.lisp</pre>
     the .emacs file, use &quot;/&quot; rather than &quot;\&quot; as the
     directory separator character).</li>
   <li>If not all the Lisp implementations were downloaded, the .emacs file will
-    still work &quot;as is&quot;. If you did download multiple installations, you
-    will probably want to change the lisp-used variable (default value is the
-    first lisp implementation in the list of lisp implementations that you
+    still work &quot;as is&quot;. If you did download multiple installations,
+    you will probably want to change the lisp-used variable (default value is
+    the first lisp implementation in the list of lisp implementations that you
     installed) to default to the main lisp implementation that you will be
     using.</li>
   <li>Reboot the PC after making the above changes and configuration settings.</li>
